--- a/package.json
+++ b/package.json
@@ -1,7 +1,23 @@
 {
   "name": "pokemon-market",
   "version": "0.1.0",
+  "description": "",
   "private": true,
+  "homepage": "https://github.com/owner/project#readme",
+  "bugs": {
+    "url": "https://github.com/ryan953/pokemon-market/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:ryan953/pokemon-market.git"
+  },
+  "license": "MIT",
+  "author": "Ryan Albrecht <ryan.albrecht@sentry.io>",
+  "engines": {
+    "node": ">=18",
+    "npm": "USE YARN",
+    "yarm": ">=1.20"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -22,5 +38,8 @@
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.6"
+  },
+  "volta": {
+    "node": "20.4.0"
   }
 }
