--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "engines": {
     "node": ">=18",
     "npm": "USE YARN",
-    "yarm": ">=1.20"
+    "yarn": ">=1.20"
   },
   "scripts": {
     "dev": "next dev",
@@ -30,15 +30,20 @@
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
     "autoprefixer": "10.4.14",
+    "axios": "^1.4.0",
+    "axios-cache-interceptor": "^1.2.0",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.9",
     "next": "13.4.9",
+    "next-absolute-url": "^1.2.2",
+    "pokenode-ts": "^1.20.0",
     "postcss": "8.4.25",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.6"
   },
+  "devDependencies": {},
   "volta": {
     "node": "20.4.0"
   }
