--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "next-absolute-url": "^1.2.2",
     "pokenode-ts": "^1.20.0",
     "postcss": "8.4.25",
+    "query-string": "^8.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.2",
