--- a/package.json
+++ b/package.json
@@ -26,12 +26,14 @@
   },
   "dependencies": {
     "@sentry/nextjs": "^7.57.0",
+    "@tanstack/react-query": "^4.36.1",
     "@types/node": "20.4.1",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
     "axios-cache-interceptor": "^1.2.0",
+    "classnames": "^2.3.2",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.9",
     "next": "13.4.9",
@@ -41,6 +43,7 @@
     "query-string": "^8.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.11.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.6"
   },
