--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "axios": "^1.4.0",
     "axios-cache-interceptor": "^1.2.0",
     "classnames": "^2.3.2",
+    "country-flag-icons": "^1.5.7",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.9",
     "next": "13.4.9",
