--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@sentry-internal/feedback": "^0.0.1-alpha.0",
     "@sentry/nextjs": "^7.57.0",
     "@tanstack/react-query": "^4.36.1",
     "@types/node": "20.4.1",
