--- a/package.json
+++ b/package.json
@@ -25,8 +25,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@sentry-internal/feedback": "^0.0.1-alpha.9",
-    "@sentry/nextjs": "^7.57.0",
+    "@sentry/nextjs": "^7.105.0",
     "@tanstack/react-query": "^4.36.1",
     "@types/node": "20.4.1",
     "@types/react": "18.2.14",
@@ -50,6 +49,7 @@
     "typescript": "5.1.6"
   },
   "volta": {
-    "node": "20.4.0"
+    "node": "20.4.0",
+    "yarn": "4.1.1"
   }
 }
