--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.11.0",
+    "serialize-error": "^11.0.3",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.6"
   },
