--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@sentry-internal/feedback": "8.0.0-alpha.9",
-    "@sentry/nextjs": "8.0.0-alpha.9",
+    "@opentelemetry/api": "^1.8.0",
+    "@sentry/nextjs": "8.0.0-beta.4",
     "@tanstack/react-query": "^4.36.1",
     "@types/node": "20.4.1",
     "@types/react": "18.2.14",
