--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   },
   "dependencies": {
     "@opentelemetry/api": "^1.8.0",
-    "@sentry/nextjs": "8.0.0",
+    "@sentry/nextjs": "^7",
     "@tanstack/react-query": "^4.36.1",
     "@types/node": "20.4.1",
     "@types/react": "18.2.14",
