--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,8 @@
 
 # testing
 /coverage
+.yalc
+yalc.lock
 
 # next.js
 /.next/
@@ -21,6 +23,7 @@
 # misc
 .DS_Store
 *.pem
+.vscode
 
 # debug
 npm-debug.log*
