--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@openfeature/core": "^1.6.0",
+    "@openfeature/flagd-web-provider": "^0.7.2",
+    "@openfeature/web-sdk": "^1.4.0",
     "@opentelemetry/api": "^1.8.0",
     "@sentry/nextjs": "8.11.0",
     "@spotlightjs/spotlight": "^2.5.0",
