--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "@opentelemetry/api": "^1.8.0",
     "@opentelemetry/core": "^1.30.1",
     "@opentelemetry/sdk-trace-base": "^1.30.1",
-    "@sentry/nextjs": "9.0.0-alpha.0",
+    "@sentry/nextjs": "9.2.0-beta.0",
     "@spotlightjs/spotlight": "^2.5.0",
     "@tanstack/react-query": "^4.36.1",
     "@types/node": "20.4.1",
