--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "@opentelemetry/core": "^1.30.1",
     "@opentelemetry/sdk-trace-base": "^1.30.1",
     "@sentry/nextjs": "9.2.0-alpha.1",
-    "@sentry/toolbar": "^1.0.0-beta.11",
+    "@sentry/toolbar": "1.0.0-beta.20",
     "@spotlightjs/spotlight": "^2.5.0",
     "@tanstack/react-query": "^4.36.1",
     "@types/node": "20.4.1",
