--- a/package.json
+++ b/package.json
@@ -25,10 +25,7 @@
     "dev:yalc": "nodemon --exec \"$(volta which yarn) install && $(volta which yarn) dev\" --watch .yalc"
   },
   "dependencies": {
-    "@opentelemetry/api": "^1.8.0",
-    "@opentelemetry/core": "^1.30.1",
-    "@opentelemetry/sdk-trace-base": "^1.30.1",
-    "@sentry/nextjs": "9.24.0",
+    "@sentry/nextjs": "^10.1.0",
     "@sentry/toolbar": "1.0.0-beta.20",
     "@spotlightjs/spotlight": "^2.5.0",
     "@tanstack/react-query": "^4.36.1",
@@ -55,7 +52,7 @@
     "typescript": "5.1.6"
   },
   "volta": {
-    "node": "20.4.0",
+    "node": "22.18.0",
     "yarn": "1.22.22"
   },
   "devDependencies": {
