--- a/package.json
+++ b/package.json
@@ -37,15 +37,14 @@
     "axios-cache-interceptor": "^1.2.0",
     "classnames": "^2.3.2",
     "country-flag-icons": "^1.5.7",
-    "eslint": "8.44.0",
-    "eslint-config-next": "13.4.9",
-    "next": "13.4.9",
+    "eslint": "^8.57.0",
+    "next": "^14.2.31",
     "next-absolute-url": "^1.2.2",
     "pokenode-ts": "^1.20.0",
     "postcss": "8.4.25",
     "query-string": "^8.1.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-icons": "^4.11.0",
     "serialize-error": "^11.0.3",
     "tailwindcss": "3.3.2",
@@ -56,6 +55,7 @@
     "yarn": "1.22.22"
   },
   "devDependencies": {
-    "@sentry/babel-plugin-component-annotate": "^2.16.1"
-  }
+    "eslint-config-next": "^14.2.31"
+  },
+  "packageManager": "yarn@1.22.22"
 }
