--- a/package.json
+++ b/package.json
@@ -25,10 +25,7 @@
     "dev:yalc": "nodemon --exec \"$(volta which yarn) install && $(volta which yarn) dev\" --watch .yalc"
   },
   "dependencies": {
-    "@opentelemetry/api": "^1.8.0",
-    "@opentelemetry/core": "^1.30.1",
-    "@opentelemetry/sdk-trace-base": "^1.30.1",
-    "@sentry/nextjs": "9.24.0",
+    "@sentry/nextjs": "^10.1.0",
     "@sentry/toolbar": "1.0.0-beta.20",
     "@spotlightjs/spotlight": "^2.5.0",
     "@tanstack/react-query": "^4.36.1",
@@ -40,25 +37,25 @@
     "axios-cache-interceptor": "^1.2.0",
     "classnames": "^2.3.2",
     "country-flag-icons": "^1.5.7",
-    "eslint": "8.44.0",
-    "eslint-config-next": "13.4.9",
-    "next": "13.4.9",
+    "eslint": "^8.57.0",
+    "next": "^14.2.31",
     "next-absolute-url": "^1.2.2",
     "pokenode-ts": "^1.20.0",
     "postcss": "8.4.25",
     "query-string": "^8.1.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-icons": "^4.11.0",
     "serialize-error": "^11.0.3",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.6"
   },
   "volta": {
-    "node": "20.4.0",
+    "node": "22.18.0",
     "yarn": "1.22.22"
   },
   "devDependencies": {
-    "@sentry/babel-plugin-component-annotate": "^2.16.1"
-  }
+    "eslint-config-next": "^14.2.31"
+  },
+  "packageManager": "yarn@1.22.22"
 }
